--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
-<div class="wrapper">
-  <div class="game-details">
-    <span class="score">Score: 0</span>
-    <span class="high-score">High Score: 0</span>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./main.css">
+</head>
+
+<body>
+  <div class="wrapper">
+    <div class="game-details">
+      <span class="score">Score: 0</span>
+      <span class="high-score">High Score: 0</span>
+    </div>
+    <div class="play-board"></div>
   </div>
-  <div class="play-board"></div>
-</div>
+
+  <script type="text/javascript" src="./index.js"></script>
+</body>
+
+</html>
