--- a/index.html
+++ b/index.html
@@ -5,19 +5,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Snake Game</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
-  <div class="wrapper">
-    <div class="game-details">
-      <span class="score">Score: 0</span>
-      <span class="high-score">High Score: 0</span>
+  <section class="d-flex">
+    <div class="d-flex flex-column">
+      <div class="form-check form-switch me-5">
+        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
+        <label class="form-check-label" for="flexSwitchCheckChecked">Obstacles can move</label>
+      </div>
+      <div class="obstacles d-flex flex-column white h-50 justify-center mx-auto my-4">
+        <button class="btn btn-primary">
+          <i class="bi bi-plus"></i>
+        </button>
+        <input type="number" class="">
+        <button class="btn btn-primary">
+          <i class="bi bi-dash"></i>
+        </button>
+      </div>
     </div>
-    <div class="play-board"></div>
-  </div>
+    <div class="wrapper">
+      <div class="game-details">
+        <span class="score">Score: 0</span>
+        <span class="high-score">High Score: 0</span>
+      </div>
+      <div class="play-board"></div>
+    </div>
+  </section>
 
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
   <script type="text/javascript" src="./index.js"></script>
 </body>
 
