obstacles work; update food colors

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
         <label class="form-check-label" for="flexSwitchCheckChecked">Obstacles can move</label>
       </div>
-      <div class="obstacles d-flex flex-column white h-50 justify-center mx-auto my-4">
-        <button class="btn btn-primary">
+      <div class="obstaclesDetails d-flex flex-column white h-50 justify-center mx-auto my-4">
+        <button class="btn btn-primary increase">
           <i class="bi bi-plus"></i>
         </button>
-        <input type="number" class="">
-        <button class="btn btn-primary">
+        <div class="obstacles">1</div>
+        <button class="btn btn-primary decrease">
           <i class="bi bi-dash"></i>
         </button>
       </div>
