--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section class="d-flex">
     <div class="d-flex flex-column">
       <div class="form-check form-switch me-5">
-        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
+        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked">
         <label class="form-check-label" for="flexSwitchCheckChecked">Obstacles can move</label>
       </div>
       <div class="obstaclesDetails d-flex flex-column white h-50 justify-center mx-auto my-4">
