--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 
 <body>
-  <section class="d-flex">
+  <section class="d-flex justify-center">
     <div class="d-flex flex-column">
       <div class="form-check form-switch me-5">
         <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked">
         <label class="form-check-label" for="flexSwitchCheckChecked">Obstacles can move</label>
       </div>
-      <div class="obstaclesDetails d-flex flex-column white h-50 justify-center mx-auto my-4">
+      <div class="obstaclesDetails d-flex flex-column white justify-center mx-auto my-4">
         <button class="btn btn-primary increase">
           <i class="bi bi-plus"></i>
         </button>
@@ -26,6 +26,11 @@
         <button class="btn btn-primary decrease">
           <i class="bi bi-dash"></i>
         </button>
+      </div>
+      <div class="d-flex levels">
+        <button class="easy btn btn-secondary">Easy</button>
+        <button class="medium btn btn-secondary">Medium</button>
+        <button class="hard btn btn-secondary">Hard</button>
       </div>
     </div>
     <div class="wrapper">
