--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <div class="wrapper">
       <div class="game-details">
         <span class="score">Score: 0</span>
+        <span class="description"></span>
         <span class="high-score">High Score: 0</span>
       </div>
       <div class="play-board"></div>
