--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <button class="medium btn btn-secondary">Medium</button>
         <button class="hard btn btn-secondary">Hard</button>
       </div>
+      <div class="modes">
+        <button class="btn btn-info peaceful">Peaceful Mode</button>
+      </div>
     </div>
     <div class="wrapper">
       <div class="game-details">
@@ -39,7 +42,10 @@
         <span class="description"></span>
         <span class="high-score">High Score: 0</span>
       </div>
-      <div class="play-board"></div>
+      <div>
+        <h1>Snake Game</h1>
+        <div class="play-board"></div>
+      </div>
     </div>
   </section>
 
