--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button class="medium btn btn-secondary">Medium</button>
         <button class="hard btn btn-secondary">Hard</button>
       </div>
-      <div class="modes">
+      <div class="d-flex modes justify-center">
         <button class="btn btn-info peaceful">Peaceful Mode</button>
       </div>
     </div>
