--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <button class="medium btn btn-secondary">Medium</button>
         <button class="hard btn btn-secondary">Hard</button>
       </div>
-      <div class="d-flex modes justify-center">
-        <button class="btn btn-info peaceful">Peaceful Mode</button>
+      <div class="d-flex modes">
+        <button class="btn btn-info peaceful m-auto">Peaceful Mode</button>
       </div>
     </div>
     <div class="wrapper">
