update index.html and src/js/index.js

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button class="medium btn btn-secondary">Medium</button>
         <button class="hard btn btn-secondary">Hard</button>
       </div>
-      <div class="d-flex modes">
+      <div class="d-flex modes mt-3">
         <button class="btn btn-info peaceful m-auto">Peaceful Mode</button>
       </div>
     </div>
@@ -42,10 +42,9 @@
         <span class="description"></span>
         <span class="high-score">High Score: 0</span>
       </div>
-      <div>
-        <h1>Snake Game</h1>
-        <div class="play-board"></div>
-      </div>
+      <!-- <div> -->
+      <div class="play-board"></div>
+      <!-- </div> -->
     </div>
   </section>
 
