--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <section class="d-flex justify-center">
-    <div class="d-flex flex-column">
+    <div class="d-flex flex-column px-5 py-3">
       <div class="form-check form-switch me-5">
         <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked">
         <label class="form-check-label" for="flexSwitchCheckChecked">Obstacles can move</label>
@@ -27,7 +27,7 @@
           <i class="bi bi-dash"></i>
         </button>
       </div>
-      <div class="d-flex levels">
+      <div class="d-flex levels btn-group">
         <button class="easy btn btn-secondary">Easy</button>
         <button class="medium btn btn-secondary">Medium</button>
         <button class="hard btn btn-secondary">Hard</button>
@@ -36,16 +36,18 @@
         <button class="btn btn-info peaceful m-auto">Peaceful Mode</button>
       </div>
     </div>
-    <div class="wrapper">
-      <div class="game-details">
-        <span class="score">Score: 0</span>
-        <span class="description"></span>
-        <span class="high-score">High Score: 0</span>
+    <div class="d-flex flex-column text-center">
+      <h1>Snake Game</h1>
+      <div class="wrapper">
+        <div class="game-details">
+          <span class="score">Score: 0</span>
+          <span class="description"></span>
+          <span class="high-score">High Score: 0</span>
+        </div>
+        <div class="play-board"></div>
       </div>
-      <!-- <div> -->
-      <div class="play-board"></div>
-      <!-- </div> -->
     </div>
+
   </section>
 
 
