--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/randomcolor/0.6.2/randomColor.min.js"></script>
   <script type="text/javascript" src="./src/js/index.js"></script>
 </body>
 
