--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
   <section class="d-flex justify-center">
     <div class="d-flex flex-column px-5 py-3">
       <div class="form-check form-switch me-5">
-        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked">
-        <label class="form-check-label" for="flexSwitchCheckChecked">Obstacles can move</label>
+        <input class="form-check-input" type="checkbox" role="switch" id="obstaclesMove">
+        <label class="form-check-label" for="obstaclesMove">Obstacles can move</label>
+      </div>
+      <div class="form-check form-switch me-5">
+        <input class="form-check-input" type="checkbox" role="switch" id="peacefulMode">
+        <label class="form-check-label" for="peacefulMode">Peaceful Mode</label>
       </div>
       <div class="obstaclesDetails d-flex flex-column white justify-center mx-auto my-4">
         <button class="btn btn-primary increase">
@@ -31,9 +35,6 @@
         <button class="easy btn btn-secondary">Easy</button>
         <button class="medium btn btn-secondary">Medium</button>
         <button class="hard btn btn-secondary">Hard</button>
-      </div>
-      <div class="d-flex modes mt-3">
-        <button class="btn btn-info peaceful m-auto">Peaceful Mode</button>
       </div>
     </div>
     <div class="d-flex flex-column text-center">
