--- a/index.html
+++ b/index.html
@@ -22,19 +22,22 @@
         <input class="form-check-input" type="checkbox" role="switch" id="peacefulMode">
         <label class="form-check-label" for="peacefulMode">Peaceful Mode</label>
       </div>
-      <div class="obstaclesDetails d-flex flex-column white justify-center mx-auto my-4">
-        <button class="btn btn-primary increase">
-          <i class="bi bi-plus"></i>
-        </button>
-        <div class="obstacles">1</div>
-        <button class="btn btn-primary decrease">
-          <i class="bi bi-dash"></i>
-        </button>
-      </div>
-      <div class="d-flex levels btn-group">
-        <button class="easy btn btn-secondary">Easy</button>
-        <button class="medium btn btn-secondary">Medium</button>
-        <button class="hard btn btn-secondary">Hard</button>
+      <div class="obstaclesDetails white my-4 d-flex justify-content-around">
+        <div>
+          <button class="btn btn-primary increase">
+            <i class="bi bi-plus"></i>
+          </button>
+          <div class="obstacles">1</div>
+          <button class="btn btn-primary decrease">
+            <i class="bi bi-dash"></i>
+          </button>
+        </div>
+
+        <div class="levels btn-group-vertical">
+          <button class="easy btn btn-secondary">Easy</button>
+          <button class="medium btn btn-secondary">Medium</button>
+          <button class="hard btn btn-secondary">Hard</button>
+        </div>
       </div>
     </div>
     <div class="d-flex flex-column text-center">
